--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             <h1>John Doe</h1>
         </div>
         <div class="photo">
-            <img src="../assets/images/photo.svg" alt="Photo">
+            <img src="../assets/photo.svg" alt="Photo">
         </div>
         <section class="info-section">
             <h2>Контакты</h2>
